# GoogleTestUsingCMakeToolsVSCode

./: CMakeLists.txt  README.md  main.cpp  main.hpp
test/: CMakeLists.txt  ExampleTests.cpp
